# Desafio-prossel-2026.1-software

./: .gitignore  CMakeLists.txt  README.md  compilar.sh
simulador/include/: Simulator.h
simulador/src/: Simulator.cpp
solucao/include/: Estrategia.h  Planejador.h  PlanejadorDStar.h  PlanejadorPotencial.h
solucao/src/: Estrategia.cpp  PlanejadorDStar.cpp  PlanejadorPotencial.cpp
